--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,56 @@
-appnope==0.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-black==21.12b0
-bleach==4.1.0
-brotlipy==0.7.0
+absl-py==1.0.0
+cachetools==5.0.0
 certifi==2021.10.8
-cffi @ file:///Users/ktietz/Code/oss/ci_pkgs/cffi_1624487777258/work
-chardet @ file:///Users/ktietz/Code/oss/ci_pkgs/chardet_1626783467640/work
-click==8.0.3
-conda==4.11.0
-conda-package-handling @ file:///Users/ktietz/Code/oss/ci_pkgs/conda-package-handling_1626784934972/work
-cryptography @ file:///Users/ktietz/Code/oss/ci_pkgs/cryptography_1624488650114/work
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.3
-executing==0.8.2
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-importlib-resources==5.4.0
-ipykernel==6.7.0
-ipython==8.0.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.1
-Jinja2==3.0.3
-jsonschema==4.4.0
-jupyter==1.0.0
-jupyter-client==7.1.1
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mypy-extensions==0.4.3
-nbclient==0.5.10
-nbconvert==6.4.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
+cfgv==3.3.1
+charset-normalizer==2.0.11
+-e git+ssh://git@github.com/hpcaitech/ColossalAI.git@7d15ec7fe20b07180f5dc3f4b580e2cba37c5b9e#egg=colossalai
+distlib==0.3.4
+face-alignment==1.3.5
+filelock==3.4.2
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+grpcio==1.43.0
+identify==2.4.8
+idna==3.3
+imageio==2.15.0
+importlib-metadata==4.10.1
+llvmlite==0.38.0
+Markdown==3.3.6
 networkx==2.6.3
-notebook==6.4.7
-numpy @ file:///Users/ktietz/ci_310/numpy_and_numpy_base_1644255524335/work
+nodeenv==1.6.0
+numba==0.55.1
+numpy==1.21.5
+oauthlib==3.2.0
+opencv-python==4.5.5.62
 packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
 Pillow==9.0.1
 platformdirs==2.4.1
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
-ptyprocess==0.7.0
-pure-eval==0.2.1
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments==2.11.2
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing==3.0.6
-pyrsistent==0.18.1
-PySocks @ file:///Users/ktietz/Code/oss/ci_pkgs/pysocks_1626781349491/work
-python-dateutil==2.8.2
+pre-commit==2.17.0
+protobuf==3.19.4
+psutil==5.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.7
 PyWavelets==1.2.0
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==2.0.0
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-ruamel-yaml-conda @ file:///Users/ktietz/Code/oss/ci_pkgs/ruamel_yaml_1626786937887/work
-scipy==1.8.0
-Send2Trash==1.8.0
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-stack-data==0.1.4
-terminado==0.12.1
-testpath==0.5.0
-tifffile==2022.2.2
-tomli==1.2.3
-tornado==6.1
-tqdm @ file:///tmp/build/80754af9/tqdm_1625563689033/work
-traitlets==5.1.1
-typing-extensions==4.0.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.2
+PyYAML==6.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-image==0.19.1
+scipy==1.7.3
+six==1.16.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tifffile==2021.11.2
+timm==0.4.5
+toml==0.10.2
+torch==1.10.2+cu113
+torchaudio==0.10.2+cu113
+torchvision==0.11.3+cu113
+tqdm==4.62.3
+typing_extensions==4.0.1
+urllib3==1.26.8
+virtualenv==20.13.1
+Werkzeug==2.0.3
 zipp==3.7.0
