--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cachetools==5.0.0
 certifi==2021.10.8
 cfgv==3.3.1
 charset-normalizer==2.0.11
+colossalai
 -e git+ssh://git@github.com/hpcaitech/ColossalAI.git@7d15ec7fe20b07180f5dc3f4b580e2cba37c5b9e#egg=colossalai
 distlib==0.3.4
 face-alignment==1.3.5
